<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/startup_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_startup_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_startup_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/text_startup_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/startup_location"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/country_startup_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/country_startup_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/text_country"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_startup_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="40dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_startup_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/text_city"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/startup_description"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_startup_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_startup_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="start"
                android:lines="5"
                android:hint="@string/text_description_startup"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/startup_money_invest"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/money_invest_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/money_invest_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="number"
                android:hint="@string/text_money_invest"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/money_collected_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/money_collected_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="number"
                android:hint="@string/text_collected_sum"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/startup_category"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_category_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:text="@string/category"
            android:textAlignment="textStart"
            android:textColor="#808080"
            android:textSize="24sp"
            style="?attr/materialButtonOutlinedStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/startup_image"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/startup_image"
            android:layout_width="240dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/email"
            android:src="@drawable/ic_add_photo_alternate_black_24dp"
            android:background="#C0C0C0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_confirm_changes"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/confirm_changes"
            android:textSize="18sp"
            android:lines="1"/>
    </LinearLayout>
</ScrollView>