<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/startup_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_timelapse_black_24dp"
                android:contentDescription="@string/startup_image"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/icon_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/amount_of_views"
                    android:src="@drawable/ic_amount_of_views_black_24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/amount_of_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_views_value"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:layout_alignStart="@id/icon_views"
                    app:layout_constraintTop_toTopOf="@id/icon_views"
                    app:layout_constraintBottom_toBottomOf="@id/icon_views"
                    app:layout_constraintStart_toEndOf="@id/icon_views"/>

                <ImageView
                    android:id="@+id/icon_location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/location"
                    android:src="@drawable/ic_location_black_24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/location"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/icon_location"
                    app:layout_constraintBottom_toBottomOf="@id/icon_location"/>

                <ImageView
                    android:id="@+id/icon_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/category"
                    android:src="@drawable/ic_business_category_black_24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/category"/>
                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    app:layout_constraintTop_toTopOf="@id/icon_location"
                    app:layout_constraintBottom_toBottomOf="@id/icon_location"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/text_startup_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/icon_views"/>

                <ProgressBar
                    android:id="@+id/progress_bar_money_invest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

                <TextView
                    android:id="@+id/whole_sum_invest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_money_invest_value"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/progress_bar_money_invest"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/text_whole_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_whole_sum_money"
                    app:layout_constraintStart_toEndOf="@id/whole_sum_invest"
                    app:layout_constraintTop_toTopOf="@id/whole_sum_invest"/>

                <TextView
                    android:id="@+id/collected_sum_invest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/text_money_invest_value"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="@id/text_collected_sum"
                    app:layout_constraintEnd_toStartOf="@id/text_collected_sum"/>
                <TextView
                    android:id="@+id/text_collected_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_collected_sum_money"
                    app:layout_constraintTop_toBottomOf="@id/progress_bar_money_invest"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_edit_startup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edit"
                    android:textColor="#FFBA00"
                    app:layout_constraintTop_toBottomOf="@id/whole_sum_invest"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_delete_startup"
                    style="?attr/materialButtonOutlinedStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_delete_startup"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/text_delete"
                    android:textColor="#FF0000"
                    app:layout_constraintTop_toTopOf="@id/button_edit_startup"
                    app:layout_constraintBottom_toBottomOf="@id/button_edit_startup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_edit_startup"
                    style="?attr/materialButtonOutlinedStyle"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>